--- a/src/assets/layout/styles/layout/layout.css
+++ b/src/assets/layout/styles/layout/layout.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* General */
 /* main font size */
 /* border radius of layout element e.g. card, sidebar */
@@ -68,6 +69,32 @@ body {
   min-height: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+body::-webkit-scrollbar {
+  width: 8px;
+  /* Độ rộng của thanh cuộn */
+}
+
+body::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+  /* Màu nền của thanh cuộn */
+  border-radius: 10px;
+  /* Bo góc */
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #888;
+  /* Màu của thanh cuộn */
+  border-radius: 10px;
+  /* Bo góc */
+  border: 2px solid #f1f1f1;
+  /* Viền của thanh cuộn */
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: var(--primary-color);
+  /* Màu khi hover */
 }
 
 a {
@@ -223,7 +250,7 @@ a {
   left: 0;
   bottom: 0;
   transition: transform 0.2s, left 0.2s;
-  background-color: var(--surface-overlay);
+  background-color: #222246;
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.02), 0px 0px 2px rgba(0, 0, 0, 0.05), 0px 1px 4px rgba(0, 0, 0, 0.08);
 }
 
@@ -441,6 +468,7 @@ a {
 }
 .card {
   background: #fff;
+  border: none !important;
   margin-bottom: 2rem;
   box-shadow: var(--card-shadow);
   border-radius: 4px;
@@ -463,7 +491,10 @@ a {
 .box-title {
   padding: 1rem;
   font-weight: 600;
-  border-bottom: 1px solid #ccc;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  border-bottom: 1px solid #E8EAEB;
 }
 
 .box-content {
@@ -472,6 +503,14 @@ a {
 
 .p-toast.p-toast-top-right, .p-toast.p-toast-top-left, .p-toast.p-toast-top-center {
   top: 100px;
+}
+
+.red-asterisk {
+  color: red;
+}
+
+.input-error {
+  border: 1px solid red;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -534,4 +573,10 @@ p {
 }
 p:last-child {
   margin-bottom: 0;
+}
+
+.error-message {
+  color: red;
+  font-size: 13px;
+  padding-left: 6px;
 }/*# sourceMappingURL=layout.css.map */
