--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,3 +1,4 @@
+<p-toast />
 <div
     class="surface-ground flex align-items-center justify-content-center min-h-screen min-w-screen overflow-hidden"
 >
@@ -45,6 +46,7 @@
                         pInputText
                         class="w-full md:w-30rem mb-5"
                         style="padding: 1rem"
+                        [(ngModel)]="loginRequest.email"
                     />
 
                     <label
@@ -54,7 +56,7 @@
                     >
                     <p-password
                         id="password1"
-                        [(ngModel)]="password"
+                        [(ngModel)]="loginRequest.password"
                         placeholder="Password"
                         [toggleMask]="true"
                         styleClass="mb-5"
@@ -69,6 +71,7 @@
                                 id="rememberme1"
                                 [binary]="true"
                                 styleClass="mr-2"
+                                [(ngModel)]="loginRequest.rememberMe"
                             ></p-checkbox>
                             <label for="rememberme1">Remember me</label>
                         </div>
@@ -83,10 +86,13 @@
                         pRipple
                         label="Sign In"
                         class="w-full p-3 text-xl"
-                        [routerLink]="['/']"
+                        (click)="handleLogin()"
                     ></button>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+
+<!-- [routerLink]="['/']" -->
